--- a/index.html
+++ b/index.html
@@ -7,6 +7,41 @@
   <title>Simple Tailwind Starter</title>
 </head>
 <body>
-  <h1 class="text-3xl ">Simple Tailwind Starter</h1>
+  <!-- Global Container -->
+  <div class="flex justify-center items-center min-h-screen bg-slate-100">
+    <!-- Card Container -->
+    <div class="flex flex-col p-6 m-3 space-y-10 bg-white rounded-2xl shadow-2xl md:flex-row md:space-y-0 md:space-x-10 md:m-0 md:p-16">
+      
+      <!-- Images Div -->
+      <div>
+        <img src="images/headphone.png" alt="" class="mx-auto duration-200 hover:scale-105 w-60">
+      </div>
+
+      <!-- Content -->
+      <div class="flex flex-col space-y-6">
+        <!-- Label & Title Container -->
+        <div class="flex flex-col mb-4 space-y-3 text-center md:text-left">
+          <!-- Label -->
+          <div>
+            <div class="inline-block px-3 py-1 text-sm text-white bg-black rounded-full">
+              Free Shipping
+            </div>
+          </div>
+          <!-- Title  -->
+          <div class="max-w-sm text-2xl font-medium">
+            Razer Kraken Kitty Edt Gaming Headset Quartz
+          </div>
+          <!-- Price Container -->
+          <div class="flex flex-col mb-4 space-y-3 text-center md:text-left">
+            <p class="line-through">$799</p>
+            <p class="text-5xl font-bold">$599</p>
+            <p class="text-sm font-light text-gray-400">
+              This offer is valid until April 3rd or as long as stock lasts
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 </body>
 </html>
